[gd_scene load_steps=6 format=3 uid="uid://cd5vyidrabpx8"]

[ext_resource type="Script" path="res://scripts/ui/inventory_menu/item_description.gd" id="1_kufqo"]
[ext_resource type="PackedScene" uid="uid://ml5umihi8bb0" path="res://scenes/ui/inventory_menu/inventory_item_view.tscn" id="2_qpl0y"]
[ext_resource type="Resource" uid="uid://dxecwfaahw8at" path="res://testbeds/inventory/test_item1.tres" id="2_xg048"]

[sub_resource type="LabelSettings" id="LabelSettings_clt68"]
font_size = 18

[sub_resource type="World3D" id="World3D_mq6sa"]

[node name="ItemDescription" type="VBoxContainer"]
custom_minimum_size = Vector2(138, 0)
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 138.0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 3
script = ExtResource("1_kufqo")
item = ExtResource("2_xg048")

[node name="NameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Test item 1"
label_settings = SubResource("LabelSettings_clt68")
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(138, 138)
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
own_world_3d = true
world_3d = SubResource("World3D_mq6sa")
handle_input_locally = false
size = Vector2i(138, 138)
render_target_update_mode = 4

[node name="InventoryItemView" parent="SubViewportContainer/SubViewport" instance=ExtResource("2_qpl0y")]
unique_name_in_owner = true

[node name="DescriptionLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/bold_italics_font_size = 12
theme_override_font_sizes/italics_font_size = 12
theme_override_font_sizes/mono_font_size = 12
theme_override_font_sizes/normal_font_size = 12
theme_override_font_sizes/bold_font_size = 12
bbcode_enabled = true
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="EquipButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Equip"

[node name="CombineButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Combine"

[connection signal="pressed" from="HBoxContainer/EquipButton" to="." method="_on_equip_button_pressed"]
[connection signal="pressed" from="HBoxContainer/CombineButton" to="." method="_on_combine_button_pressed"]
